--- a/apptodo/public/index.html
+++ b/apptodo/public/index.html
@@ -24,5 +24,6 @@
       src="https://kit.fontawesome.com/8babc6af6f.js"
       crossorigin="anonymous"
     ></script>
+    <script src="./utility/script.js"></script>
   </body>
 </html>
