--- a/apptodo/public/index.html
+++ b/apptodo/public/index.html
@@ -20,9 +20,10 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script
+  </body>
+</html>
+<!--  <script
       src="https://kit.fontawesome.com/8babc6af6f.js"
       crossorigin="anonymous"
     ></script>
-  </body>
-</html>
+  -->
